syntax = "proto3";

package yandex.cloud.events.containerregistry;

import "google/rpc/status.proto";
import "yandex/cloud/containerregistry/v1/ip_permission.proto";
import "yandex/cloud/events/common.proto";
import "yandex/cloud/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/events/containerregistry;containerregistry";
option java_package = "yandex.cloud.api.events.containerregistry";
option java_outer_classname = "ContainerRegistryEvents";

message CreateRegistry {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];

  message EventDetails {
    string registry_id = 1 [(required) = true];
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
}

message UpdateRegistry {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];

  message EventDetails {
    string registry_id = 1 [(required) = true];
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
}

message DeleteRegistry {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];

  message EventDetails {
    string registry_id = 1 [(required) = true];
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
}

message CreateImage {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];

  message EventDetails {
    string registry_id = 1 [(required) = true];
    string image_id = 2 [(required) = true];
    string repository_name = 3 [(required) = true, (pattern) = "[a-z0-9]+(?:[._-][a-z0-9]+)*(/([a-z0-9]+(?:[._-][a-z0-9]+)*))*"];
    string image_digest = 4 [(required) = true, (pattern) = "[a-zA-Z0-9-_+.]+:[a-fA-F0-9]+"];
    string tag = 5 [(required) = true];
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    ERROR = 1;
    DONE = 2;
  }
}

message DeleteImage {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];

  message EventDetails {
    string registry_id = 1 [(required) = true];
    string image_id = 2 [(required) = true];
    string repository_name = 3 [(required) = true, (pattern) = "[a-z0-9]+(?:[._-][a-z0-9]+)*(/([a-z0-9]+(?:[._-][a-z0-9]+)*))*"];
    string image_digest = 4 [(required) = true, (pattern) = "[a-zA-Z0-9-_+.]+:[a-fA-F0-9]+"];
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
}

message CreateImageTag {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];

  message EventDetails {
    string registry_id = 1 [(required) = true];
    string image_id = 2 [(required) = true];
    string image_digest = 5 [(required) = true];
    string repository_name = 3 [(required) = true];
    string tag = 4 [(required) = true, (length) = "<=128"];
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    ERROR = 1;
    DONE = 2;
  }
}

message DeleteImageTag {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];

  message EventDetails {
    string registry_id = 1 [(required) = true];
    string image_id = 2 [(required) = true];
    string image_digest = 5 [(required) = true];
    string repository_name = 3 [(required) = true];
    string tag = 4 [(required) = true, (length) = "<=128"];
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    ERROR = 1;
    DONE = 2;
  }
}

message UpdateRegistryAccessBindings {
   Authentication authentication = 1 [(required) = true];
   Authorization authorization = 2 [(required) = true];
   EventMetadata event_metadata = 3 [(required) = true];
   RequestMetadata request_metadata = 4 [(required) = true];
   EventStatus event_status = 5 [(required) = true];
   google.rpc.Status error = 6;
   EventDetails details = 7 [(required) = true];

   message EventDetails {
     string registry_id = 1 [(required) = true];
   }

   enum EventStatus {
     EVENT_STATUS_UNSPECIFIED = 0;
     STARTED = 1;
     ERROR = 2;
     DONE = 3;
   }
}

message UpdateRepositoryAccessBindings {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];

  message EventDetails {
    string repository_name = 1 [(required) = true];
    string registry_id = 2 [(required) = true];
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
}

message CreateRepository {
   Authentication authentication = 1 [(required) = true];
   Authorization authorization = 2 [(required) = true];
   EventMetadata event_metadata = 3 [(required) = true];
   RequestMetadata request_metadata = 4 [(required) = true];
   EventStatus event_status = 5 [(required) = true];
   google.rpc.Status error = 6;
   EventDetails details = 7 [(required) = true];

   message EventDetails {
     string repository_id = 1 [(required) = true];
     string repository_name = 2 [(required) = true];
   }

   enum EventStatus {
     EVENT_STATUS_UNSPECIFIED = 0;
     STARTED = 1;
     ERROR = 2;
     DONE = 3;
   }
}

message DeleteRepository {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];

  message EventDetails {
    string repository_id = 1 [(required) = true];
    string repository_name = 2 [(required) = true];
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
}

message UpdateIpPermission {
  Authentication authentication = 1 [(required) = true];
  Authorization authorization = 2 [(required) = true];
  EventMetadata event_metadata = 3 [(required) = true];
  RequestMetadata request_metadata = 4 [(required) = true];
  EventStatus event_status = 5 [(required) = true];
  google.rpc.Status error = 6;
  EventDetails details = 7 [(required) = true];

  message EventDetails {
    string registry_id = 1 [(required) = true];
    string action = 2 [(required) = true];
    repeated yandex.cloud.containerregistry.v1.IpPermissionDelta delta = 3 [(required) = true];
  }

  enum EventStatus {
    EVENT_STATUS_UNSPECIFIED = 0;
    STARTED = 1;
    ERROR = 2;
    DONE = 3;
  }
}
