syntax = "proto2";

package persistence;

import "google/protobuf/duration.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/persistence/config";

////////////////////////////////////////////////////////////////////////////////

message PersistenceConfig {
    required string Endpoint = 1;
    required string Database = 2;
    optional string RootPath = 3;
    optional bool Secure = 4;
    optional string RootCertsFile = 5;
    optional string ConnectionTimeout = 6 [default = "10s"];
    optional bool DisableAuthentication = 7;
    optional S3Config S3Config = 8;
}

message S3Config {
    required string Endpoint = 1;
    required string Region = 2;
    required string CredentialsFilePath = 3;
}
